<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- TabWidget used to select tab-->
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Holds data for the activity -->
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- First tab -->
                <LinearLayout
                    android:id="@+id/first_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/introduktion_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/introduktion_text"
                        style="@style/TitleText"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_utbud"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="1dp"
                        android:paddingBottom="8dp"/>
                </LinearLayout>

                <!-- Second tab -->

                <LinearLayout
                    android:id="@+id/second_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/valj_macka"
                        style="@style/TitleText"/>

                    <Spinner
                        android:id="@+id/sandwich_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/lagg_i_kundvagn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/lagg_i_kundvagnen"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_kundvagn"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="8dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/valj_datum_for_upphamtning"
                        style="@style/DescriptionText"/>

                    <Button
                        android:id="@+id/date_picker_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:hint="@string/enter_date"
                        style="@style/DescriptionText"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/valj_tidpunkt_for_upphamtning"
                        style="@style/DescriptionText"/>

                    <Button
                        android:id="@+id/time_picker_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:hint="@string/enter_time"
                        style="@style/DescriptionText"/>

                    <Button
                        android:id="@+id/lagg_bestallning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/lagg_bestallning"/>
                </LinearLayout>

                <!-- Third tab -->
                <LinearLayout
                    android:id="@+id/third_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mina_bestallningar"
                        android:layout_marginBottom="5dp"
                        style="@style/TitleText"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_bestallning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="8dp"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</androidx.constraintlayout.widget.ConstraintLayout>